Fixing mobile isuues

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   </head>
   <body>
     <!-- Start Header  -->
-    <header>
+    <header id="header">
       <div class="container">
         <img class="logo" src="images/logo.png" alt="Logo" />
         <nav>
           <i class="fas fa-bars toggle-menu"></i>
           <ul>
-            <li><a class="active" href="#" id="Home">Home</a></li>
+            <li><a class="active" href="#">Home</a></li>
             <li><a href="#Services">Services</a></li>
             <li><a href="#Portfolio">Portfolio</a></li>
             <li><a href="#About">About</a></li>
@@ -67,7 +67,7 @@
       </ul>
     </div>
     <div class="scroll-up">
-      <a href="#Home">Scroll Up</a>
+      <a href="#header">Scroll Up</a>
     </div>
     <!-- End Landing -->
     <!-- Start Services -->
